--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html {
-    padding: 0;
-    margin: 0;
     font-family: 'Roboto', sans-serif;
     width: 100%;
-    height: 100%;
+}
+body {
+    padding: 0;
+    margin: 0;
 }
  ul {
   list-style-type: none;
@@ -15,7 +16,8 @@ html {
     display: inline-flex;
     position: relative;
     justify-content: flex-end;
-    margin-right: 70px;
+    margin-top: 15px;
+    margin-left: -20px;
 }
 .nav>li {
     margin: 10px 5px;
@@ -23,17 +25,18 @@ html {
 }
 nav li a {
     color: black;
-    font-size: 13px;
+    font-size: 14px;
 }
 #signin {
     
     background: #4387fd;
     border: 1px solid #4285f4;
+    border-radius: 2px;
 }
 #signin a {
     color: #fff;
-    padding: 30px 10px;
-    font-weight: bold;
+        padding: 5px 10px;
+
 }
 li a {
     text-decoration: none;
@@ -49,8 +52,53 @@ li a {
 }
 .search {
     background-image: url('/searchicon.png');
-    width: 100%;
+    width: 500px;
+    background-repeat: no-repeat;
+    height: 40px;
+    border-radius: 30px;
+    border: 1px solid #cacbcc;
+    margin: 20px 0;
+    background-size: 15px;
+    background-position: 1vh;
+}
+.search:hover {
+border: none;
+box-shadow: 2px 2px 4px 2px rgba(221,221,221,.7);
 }
 button {
     color: #5f6368;
+    border: none;
+    padding: 10px 20px;
+    font-size: 14px;
+    border-radius: 5px;
+    margin: 10px 5px;
+}
+button:hover {
+    background-color: rgb(240, 239, 239);
+    border: 1px solid #ddd;
+    color: #000
+}
+.footer {
+    width: 100%;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background: #ddd;
+    border-top: 1px solid rgba(0,0,0,.2);
+    bottom: 0;
+    position: fixed;
+    font-size: 13.5px;
+}
+.footer1 a:hover, .footer2 a:hover {
+    border-bottom: 1px solid rgb(75, 74, 74);
+}
+.footer1 {
+    display: inline-flex;
+}
+.footer2 {
+    display: inline-flex;
+}
+.footer1>li, .footer2>li {
+    margin: 10px;
+    height: 1.5rem;
 }
